# movies_admin

./: .dockerignore  .env.example  .env.test  .flake8  .gitignore  .isort.cfg  Dockerfile  Makefile  README.md  docker-compose-base.yml  docker-compose-local.yml  docker-compose-prod.yml  pyproject.toml  run.sh
.github/workflows/: code-checker.yaml
movies_admin/: manage.py  requirements.txt
movies_admin/config/: .env.example  .env.test  asgi.py  settings.py  urls.py  wsgi.py
movies_admin/config/components/: base.py  common.py  database.py
movies_admin/config/environments/: dev.py  prod.py
movies_admin/config/settings/: base.py  dev.py  production.py
movies_admin/movies/: admin.py  models.py
movies_admin/movies/locale/en/LC_MESSAGES/: django.po
movies_admin/movies/locale/ru/LC_MESSAGES/: django.po
movies_admin/movies/migrations/: 0001_initial.py  0002_filmwork_file_path.py  0003_alter_personfilmwork_role.py
nginx/: nginx.conf
nginx/conf.d/: site.conf
schema_design/: movies_database.ddl
sqlite_to_postgres/: .env.example  actions.py  common.py  consts.py  load_data.py  models.py  record_data.py
tests/: conftest.py  vars.py
tests/check_consistency/: test_tables.py
