[tool.black]
line-length = 79
target-version = ['py39']
include = '\.pyi?$'
exclude = '''
/(
   venv
   | migrations
   | locale
   | schema_design
)/
'''

[tool.poetry]
name = "new_admin_panel_sprint_1"
version = "0.1.0"
description = ""
authors = []

[tool.poetry.dependencies]
python = "~3.11"
Django = "4.2.3"
django-split-settings = "1.2.0"
python-dateutil = "2.8.2"
python-dotenv = "1.0.0"
psycopg = {extras = ["binary"], version = "3.1.9"}

[tool.poetry.dev-dependencies]
django-debug-toolbar = "4.1.0"
python-gettext = "5.0"
click = "8.1.6"
pytest = "7.4.0"
# linters
black = "23.7.0"
flake8 = "6.0.0"
isort = "5.12.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
